[gd_scene load_steps=6 format=3 uid="uid://bpvkxu51giy0b"]

[ext_resource type="Script" uid="uid://cx2326hddp7xj" path="res://scenes/ui/game_ui/health_bar.gd" id="1_4wuuj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4ejid"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_306h4"]
bg_color = Color(0.396078, 0.843137, 0.627451, 1)
corner_radius_top_right = 4
corner_radius_bottom_left = 4
corner_detail = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eg5hc"]
bg_color = Color(0.922555, 0.534578, 0.551341, 0.345098)
corner_radius_top_right = 4
corner_radius_bottom_left = 4
corner_detail = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4xeic"]
bg_color = Color(1, 1, 1, 0.611765)
corner_radius_top_right = 4
corner_radius_bottom_left = 4
corner_detail = 1
anti_aliasing = false

[node name="HealthBar" type="ProgressBar"]
z_index = 1
custom_minimum_size = Vector2(306, 16)
theme_override_styles/background = SubResource("StyleBoxEmpty_4ejid")
theme_override_styles/fill = SubResource("StyleBoxFlat_306h4")
max_value = 10.0
step = 0.1
value = 5.0
show_percentage = false
script = ExtResource("1_4wuuj")

[node name="RecentDamageBar" type="ProgressBar" parent="."]
modulate = Color(0.972549, 0.678431, 0.67451, 1)
z_index = -1
custom_minimum_size = Vector2(32, 8)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_eg5hc")
theme_override_styles/fill = SubResource("StyleBoxFlat_4xeic")
max_value = 10.0
value = 6.0
show_percentage = false

[node name="DamageDelay" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="DamageDelay" to="." method="_on_damage_delay_timeout"]
